Digging the grave for the import problems